--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -12,7 +12,7 @@
   gap: 64px;
   font-family: var(--font-geist-sans);
 
-  background-image: radial-gradient(circle 815px at 23.4% -21.8%, #091d55 0.2%, #000000 100.2%);
+  background-image: radial-gradient(circle 815px at 23.4% -21.8%, rgba(9, 29, 85, 1) 0.2%, rgba(0, 0, 0, 1) 100.2%);
 }
 
 .main {
@@ -85,7 +85,8 @@
   display: block;
   text-align: center;
   height: 160px;
-  width: 400px;
+  max-width: 400px;
+  width: 100%;
   border-bottom: solid 2px #fff;
   margin-bottom: 3rem;
   overflow: hidden;
